--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dev": "webpack",
   "build": "NODE_ENV=production webpack",
   "deploy": "node deploy",
-  "start": "webpack serve"
+  "start": "webpack serve --open"
  },
  "author": "",
  "license": "ISC",
